// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs based on column width items 1`] = `
[
  {
    "colId": "c_0",
    "field": "c_0",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 666,
  },
  {
    "colId": "c_1",
    "field": "c_1",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 175,
  },
  {
    "colId": "c_2",
    "field": "c_2",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 666,
  },
  {
    "colId": "c_3",
    "field": "c_3",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 175,
  },
  {
    "colId": "c_4",
    "field": "c_4",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
  {
    "colId": "c_5",
    "field": "c_5",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 175,
  },
  {
    "colId": "c_6",
    "field": "c_6",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 666,
  },
  {
    "colId": "c_7",
    "field": "c_7",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 175,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs based on column width items 2`] = `
[
  {
    "cellRenderer": "loadingRenderer",
    "colId": "r_0",
    "field": "r_0",
    "headerName": "Product",
    "headerTooltip": "Product",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 300,
  },
  {
    "colId": "r_1",
    "field": "r_1",
    "headerName": "Department",
    "headerTooltip": "Department",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 666,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs when mix of manual and auto-resizing 1`] = `
[
  {
    "colId": "c_0",
    "field": "c_0",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
  {
    "colId": "c_1",
    "field": "c_1",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs when mix of manual and auto-resizing 2`] = `
[
  {
    "cellRenderer": "loadingRenderer",
    "colId": "r_0",
    "field": "r_0",
    "headerName": "Product",
    "headerTooltip": "Product",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 100,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs when mix of manual and auto-resizing and grow-to-fit on 1`] = `
[
  {
    "colId": "c_0",
    "field": "c_0",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 500,
  },
  {
    "colId": "c_1",
    "field": "c_1",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should enrich colDefs when mix of manual and auto-resizing and grow-to-fit on 2`] = `
[
  {
    "cellRenderer": "loadingRenderer",
    "colId": "r_0",
    "field": "r_0",
    "headerName": "Product",
    "headerTooltip": "Product",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 100,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should set with to default if no other size specification provided 1`] = `
[
  {
    "colId": "c_0",
    "field": "c_0",
    "headerName": "Amount",
    "headerTooltip": "Amount",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 666,
  },
  {
    "colId": "c_1",
    "field": "c_1",
    "headerName": "Won",
    "headerTooltip": "Won",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 666,
  },
]
`;

exports[`updateColumnDefinitionsWithWidths > should set with to default if no other size specification provided 2`] = `
[
  {
    "cellRenderer": "loadingRenderer",
    "colId": "r_0",
    "field": "r_0",
    "headerName": "Product",
    "headerTooltip": "Product",
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 666,
  },
]
`;
